// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Email Send Form > matches snapshot in dry-run mode 1`] = `
"
 📧 Resend CLI - Emails - Send

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ⚠  DRY RUN MODE: Operations will be validated but not executed.                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯


 From           │our Name <sender@domain.com>
                ────────────────────────────────────────────────────────────
                Sender email address with optional name
 To             recipient@domain.com
                ────────────────────────────────────────────────────────────

 Subject        Enter email subject
                ────────────────────────────────────────────────────────────

 BCC            bcc@domain.com
                ────────────────────────────────────────────────────────────

 CC             cc@domain.com
                ────────────────────────────────────────────────────────────

 Schedule       in 1 hour OR 2024-08-05T11:52:01.858Z
                ────────────────────────────────────────────────────────────

 Reply To       reply@domain.com
                ────────────────────────────────────────────────────────────

 HTML Content   <p>Your HTML content here</p>
                ────────────────────────────────────────────────────────────

 Text Content   Your plain text message here...
                ────────────────────────────────────────────────────────────


 Tab/↓ Next field · Shift+Tab/↑ Previous field
 Enter Submit · Esc Cancel

"
`;

exports[`Email Send Form > matches snapshot in normal mode 1`] = `
"
 📧 Resend CLI - Emails - Send


 From           │our Name <sender@domain.com>
                ────────────────────────────────────────────────────────────
                Sender email address with optional name
 To             recipient@domain.com
                ────────────────────────────────────────────────────────────

 Subject        Enter email subject
                ────────────────────────────────────────────────────────────

 BCC            bcc@domain.com
                ────────────────────────────────────────────────────────────

 CC             cc@domain.com
                ────────────────────────────────────────────────────────────

 Schedule       in 1 hour OR 2024-08-05T11:52:01.858Z
                ────────────────────────────────────────────────────────────

 Reply To       reply@domain.com
                ────────────────────────────────────────────────────────────

 HTML Content   <p>Your HTML content here</p>
                ────────────────────────────────────────────────────────────

 Text Content   Your plain text message here...
                ────────────────────────────────────────────────────────────


 Tab/↓ Next field · Shift+Tab/↑ Previous field
 Enter Submit · Esc Cancel

"
`;
